# ECC-Cache

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-client  LICENSE  README.md  build.rs  config.json  docker-compose-raft.yml  docker-compose.yml  ecc_config.json  notes.md  raft_config.json
.github/workflows/: server.yml
memstore/: Cargo.toml  build.rs
memstore/proto/: raft.proto
memstore/src/: lib.rs  main.rs  network.rs  server.rs
proto/: ecc.proto  ecc_client.proto  raft.proto
report/benchmarks/: benchmark.go  docker-compose-ecc.yml  docker-compose-raft.yml  docker-compose.yml  readme.md
report/benchmarks/no_failure/workload_a_raft/: workload_a_raft.txt
report/benchmarks/no_failure/workload_c_raft/: workload_c_raft.txt
report/benchmarks/node_failure/workload_b_ecc_node_failure/: workload_b_ecc_node_failure.txt
report/benchmarks/node_failure/workload_b_raft_node_failure/: workload_b_raft_node_failure.txt
report/benchmarks/one_failure/workload_a_ecc_node_failure/: workload_a_ecc_node_failure.txt
report/benchmarks/one_failure/workload_a_raft_node_failure/: workload_a_raft_node_failure.txt
src/: cli.rs  client.rs  ecc.rs  main.rs  network.rs  raft.rs  replication.rs  server.rs  server_cli.rs  storage.rs
src/ecc/: client.rs  convert.rs  ecc.rs  main.rs  reed_solomon.rs  server.rs
src/lib/: raft_helpers.rs  server.rs
src/raft/: client.rs  network.rs  raft.rs  server.rs  storage.rs
src/replication/: main.rs  network.rs  raft.rs  server.rs  storage.rs
