[package]
name = "memstore"
version = "0.2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.32"
async-raft = { version="0.6" }
serde = { version="1.0.114", features=["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.20"
tokio = { version="1.0", default-features=false, features=["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }

tracing = { version = "0.1.17" }
tracing-futures = "0.2.4"
futures="0.3.15"


tonic = "0.5"
prost = "0.8"

[build-dependencies]
tonic-build = "0.5"
